<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 
    tools:context="com.share.shareinfo.profile.RegisterActivity">
    
     <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@+id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:id="@+id/phone_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:textSize="14sp"
                android:id="@+id/phone_edit"
                android:hint="@string/input_mobile_hint" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="验证码"
                android:id="@+id/verfiy_text" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/verfiy_edit"
                android:textSize="14sp"
                android:hint="@string/input_verfiy_hint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_verfiy_code"
                android:textSize="14sp"
                android:id="@+id/get_verfiy" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_text"
                android:id="@+id/pwd_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/pwd_edit"
                android:textSize="14sp"
                android:hint="@string/input_pwd_hint" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_btn"
            android:id="@+id/register_btn" />
    </LinearLayout>
</RelativeLayout>
